Fix UI: truncate input on long questionnaire names

--- a/web/static/css/_layout.scss
+++ b/web/static/css/_layout.scss
@@ -178,6 +178,9 @@ header {
     }
     .title {
       max-width: 100%;
+      position: absolute;
+      display: flex;
+      align-items: center;
       + input {
         height: 30px;
         top: 50px;
